# cobol-to-rust

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cobol-parser/: Cargo.toml
crates/cobol-parser/src/: analyzer.rs  copybook.rs  data_division.rs  exec_sql.rs  fd_parser.rs  lib.rs  redefines.rs  string_ops.rs  types.rs
crates/rust-generator/: Cargo.toml
crates/rust-generator/src/: compute.rs  decimal.rs  generator.rs  lib.rs  llm.rs  prompt.rs  sql_gen.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: comparator.rs  compiler.rs  convergence.rs  fix_loop.rs  lib.rs
output/01-hello-world/: Cargo.toml
output/01-hello-world/src/: main.rs
output/02-pic-arithmetic/src/: main.rs
output/03-perform-loop/src/: main.rs
output/04-file-read/src/: main.rs
output/05-copybook/src/: main.rs
output/batchupd/: Cargo.toml
output/batchupd/src/: main.rs
output/cbl0001/src/: main.rs
output/cbl0002/src/: main.rs
output/cbl0003/src/: main.rs
output/cbl0004/src/: main.rs
output/hello-cbl/src/: main.rs
results/: oss-conversion-report.md  qa-review-pr2.md
test-projects/batch-update/: BATCHUPD.cbl
test-projects/cobol-programming-course/COBOL/: CBL0001.cbl  CBL0002.cbl  CBL0003.cbl  CBL0004.cbl
tests/fixtures/02_pic_arithmetic/: expected_output.txt  input.cob
tests/fixtures/03_perform_loop/: expected_output.txt  input.cob
tests/fixtures/04_file_read/: input.cob
tests/fixtures/05_copybook/: CUSTOMER.cpy  expected_output.txt  input.cob
