[workspace]
resolver = "2"
members = [
    "crates/cobol-parser",
    "crates/rust-generator",
    "crates/verifier",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
cobol-parser = { path = "crates/cobol-parser" }
rust-generator = { path = "crates/rust-generator" }
verifier = { path = "crates/verifier" }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
regex = "1"
rust_decimal = "1"
