[package]
name = "rust-generator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cobol-parser.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
regex.workspace = true
rust_decimal.workspace = true
reqwest = { version = "0.12", features = ["json"] }
