[package]
name = "verifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cobol-parser.workspace = true
rust-generator.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tempfile = "3"
